Modify init files

--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
+    "prestart:local": "npm run build",
+    "start:local": "node ./packages/backend/build/bin/www.js --env development",
+    "lint": "node ./node_modules/eslint/bin/eslint.js packages --ext=.ts,.js,.jsx",
     "clean": "npx lerna run --parallel clean",
-    "build": "npx run-p clean && run-s build:all",
-    "build:all": "npx tsc -b",
+    "build": "npm run clean && npm run build:all",
+    "build:all": "npx lerna run build --stream",
     "test:local": "npm test --envir=local",
-    "test": "cross-env NODE_ENV=$npm_config_envir node --max_old_space_size=4096 ./node_modules/.bin/jest --runInBand --logHeapUsage --detectOpenHandles --forceExit"
+    "test": "cross-env NODE_ENV=$npm_config_envir node --max_old_space_size=4096 ./node_modules/jest/bin/jest.js --runInBand --logHeapUsage --detectOpenHandles --forceExit"
   },
+  "pre-commit": [
+    "lint",
+    "test:local"
+  ],
   "devDependencies": {
-    "lerna": "3.22.1",
-    "typescript": "4.0.5",
-    "jest": "26.6.3",
-    "ts-jest": "26.4.3",
     "@types/jest": "26.0.15",
-    "ts-node": "9.0.0",
-    "npm-run-all": "4.1.5",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "cross-env": "7.0.2",
+    "eslint": "^7.14.0",
+    "jest": "26.6.3",
     "jest-html-reporters": "2.1.0",
-    "cross-env": "7.0.2"
+    "lerna": "3.22.1",
+    "npm-run-all": "4.1.5",
+    "pre-commit": "^1.2.2",
+    "supertest": "^6.0.1",
+    "ts-jest": "26.4.3",
+    "ts-node": "9.0.0",
+    "typescript": "4.0.5"
   }
 }
