--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "DOM"
     ],
     "types": [
-      "reflect-metadata"
+      "reflect-metadata",
+      "@types/jest"
     ],
     "declaration": true,
     "composite": true,
@@ -17,8 +18,8 @@
     "strictNullChecks": true,
     "baseUrl": "./packages",
     "paths": {
-      "@namespace/app-module": [
-        "app-module/src"
+      "@demo/*": [
+        "*/src"
       ]
     },
     "moduleResolution": "node",
