--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "types": [
       "reflect-metadata",
-      "@types/jest"
+      "@types/jest",
+      "node"
     ],
     "declaration": true,
     "composite": true,
