--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,13 +5,12 @@
   "author": "hand_wu <Hand_Wu@compal.com>",
   "homepage": "https://github.com/xxxhand/ts-mono-sample#readme",
   "license": "ISC",
-  "main": "lib/backend.js",
+  "main": "build/index.js",
   "directories": {
-    "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "__tests__"
   ],
   "publishConfig": {
     "access": "public"
@@ -27,6 +26,7 @@
     "url": "https://github.com/xxxhand/ts-mono-sample/issues"
   },
   "dependencies": {
+    "@demo/app-common": "0.0.0",
     "@koa/router": "^10.0.0",
     "koa": "^2.13.1",
     "socket.io": "^3.1.2"
