--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/koa": "^2.13.1",
     "@types/koa-router": "^7.4.1",
+    "@types/koa__router": "^8.0.4",
     "@types/socket.io": "^2.1.13"
   }
 }
