--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@demo/backend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "> TODO: description",
   "author": "hand_wu <Hand_Wu@compal.com>",
   "homepage": "https://github.com/xxxhand/ts-mono-sample#readme",
@@ -26,7 +26,7 @@
     "url": "https://github.com/xxxhand/ts-mono-sample/issues"
   },
   "dependencies": {
-    "@demo/app-common": "0.0.0",
+    "@demo/app-common": "^0.0.1",
     "@koa/router": "^10.0.0",
     "koa": "^2.13.1",
     "socket.io": "^3.1.2"
