--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "rules": {
     "no-var": "error",
     "comma-dangle": [
@@ -20,10 +22,20 @@
     "no-eval": "error",
     "no-inline-comments": "error",
     "no-const-assign": "error",
-    "semi": ["error", "always"],
+    "semi": [
+      "error",
+      "always"
+    ],
     "@typescript-eslint/consistent-type-definitions": [
       "error",
       "interface"
+    ],
+    "indent": [
+      2,
+      "tab",
+      {
+        "SwitchCase": 1
+      }
     ]
   },
   "globals": {
